--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -38,9 +38,7 @@
     "print(np.__version__)\n",
     "from mirage import WordCountingChunkingAlgorithm, FolderRawStorage, WhooshChunkStorage\n",
     "from mirage import HuggingFaceEmbedder, TextNormalizer\n",
-    "from mirage import NatashaSentenceChunking, SemanticChunking\n",
-    "import os\n",
-    "import pickle"
+    "from mirage import NatashaSentenceChunking, SemanticChunking"
    ]
   },
   {
