Добавил примерное количество параметров для экспериментов

--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -21,14 +21,6 @@
      "output_type": "stream",
      "text": [
       "1.26.4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Bulkin\\MIRAGE\\env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -43,16 +35,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Bulkin\\MIRAGE\\env\\Lib\\site-packages\\huggingface_hub\\file_download.py:140: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\Bulkin\\.cache\\huggingface\\hub\\models--BAAI--bge-m3. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n"
+     ]
+    }
+   ],
    "source": [
     "embedder = HuggingFaceEmbedder(model_name='BAAI/bge-m3', normalizer=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,87 +70,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Splitting text into the sentences\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "611it [00:00, 39683.48it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "creating embeddings of the sentences for semantic grouping\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 611/611 [01:23<00:00,  7.30it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adding chunks to the storage\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 50/50 [00:01<00:00, 41.63it/s]\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "algorithm = SemanticChunking(raw_storage=documents, chunk_storage=chunks, embedder=embedder, threshold=0.25, max_chunk_size=1000)\n",
-    "algorithm.execute(visualize=True)"
+    "# algorithm = SemanticChunking(raw_storage=documents, chunk_storage=chunks, embedder=embedder, threshold=0.25, max_chunk_size=1000)\n",
+    "algorithm = WordCountingChunkingAlgorithm(raw_storage=documents, chunk_storage=chunks, words_amount=500)\n",
+    "algorithm.execute() # visualize=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "889\n"
+      "3422\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'— Для меня большая честь работать вместе с вами, мистер Холме, — с искренним чувством ответил инспектор. — В таком случае, я хотел бы, не откладывая, выслушать свидетелей и осмотреть то место, где было совершено преступление. Инспектор Мартин был настолько умен, что позволил моему приятелю поступать по-своему. Сам он ограничился тем, что внимательно следил за его работой. Местный врач, седобородый старик, только что вышел из комнаты миссис Хилтон Кьюбитт и сообщил, что ее положение серьезно, но не безнадежно; однако в сознание она придет, вероятно, не скоро, так как пуля задела мозг. На вопрос, сама ли она в себя выстрелила или в нее выстрелил кто-нибудь другой, он не решился дать определенный ответ. Во всяком случае, выстрел был сделан с очень близкого расстояния. В комнате нашли всего один револьвер; оба ствола были пусты. Мистер Хилтон Кьюбитт убит выстрелом прямо в сердце.'"
+       "'не отрываясь смотрел на север, где на самом краю голубого небосвода показались три темные точки. С каждой секундой они становились все больше и все ближе и вскоре превратились в трех крупных коричневых птиц, которые медленно покружили над головами путников и уселись на скале чуть выше них. Это были сарычи, хищники западных равнин, их появление предвещало смерть.\\r\\n\\r\\n—\\xa0Курочки, курочки!\\xa0— радостно воскликнула девочка, указывая на зловещих птиц, и захлопала в ладошки, чтобы они снова взлетели.\\xa0— Послушай, а это место тоже создал Бог?\\r\\n\\r\\nНеожиданный вопрос вывел его из задумчивости.\\r\\n\\r\\n—\\xa0Конечно!\\r\\n\\r\\n—\\xa0Он создал Иллинойс, и Миссури тоже он создал,\\xa0— продолжала девочка.\\r\\n\\r\\n—\\xa0А это место, наверное, создал кто-то другой и забыл про деревья и воду. Тут не так хорошо, как там.\\r\\n\\r\\n—\\xa0Может, помолимся?\\xa0— неуверенно предложил ее спутник.\\r\\n\\r\\n—\\xa0Но мы же еще не ложимся спать,\\xa0— возразила девочка.\\r\\n\\r\\n—\\xa0Это ничего. Конечно, еще не время для молитвы, но Бог не обидится, ручаюсь тебе. Прочти те молитвы, что ты всегда читала на ночь в повозке, когда мы ехали по долинам.\\r\\n\\r\\nДевочка удивленно раскрыла глаза.\\r\\n\\r\\n—\\xa0А почему ты сам не хочешь?\\r\\n\\r\\n—\\xa0Я их позабыл,\\xa0— сказал он.\\xa0— Я не молился с тех пор, как был чуть побольше, чем ты. Молись, а я буду повторять за тобой.\\r\\n\\r\\n—\\xa0Тогда ты должен стать на колени, и я тоже стану,\\xa0— сказала девочка, расстилая на земле шаль.\\xa0— Сложи руки вот так, и тебе сразу станет хорошо.\\r\\n\\r\\nЭто было странное зрелище, которого, впрочем, не видел никто, кроме сарычей. На расстеленной шали бок о бок стояли на коленях двое путников: щебечущий ребенок и отчаянный, закаленный жизнью бродяга. Его изможденное, костлявое лицо и круглая мордашка девочки были запрокинуты вверх; глядя в безоблачное небо, оба горячо молились страшному божеству, с которым они остались один на один. Два голоса — тоненький, звонкий и низкий и хриплый\\r\\n\\r\\n—\\xa0молили его о милости и прощении. Помолившись, они сели в тени возле валуна; девочка вскоре уснула, прикорнув на широкой груди своего покровителя. Он долго сторожил ее сон, но мало-помалу усталость взяла свое. Три дня и три ночи он не смыкал глаз и не давал себе отдыха. Его отяжелевшие веки постепенно опускались, а голова все ниже и ниже клонилась на грудь, пока его поседевшая борода не коснулась золотистых локонов девочки. Оба спали крепким, тяжелым сном без сновидений.\\r\\n\\r\\nЕсли бы путнику удалось побороть сонливость, то через полчаса его глазам представилась бы странная картина. Далеко, на самом краю соляной равнины, показалось крошечное облачко пыли; поначалу еле заметное, сливающееся с дымкой на горизонте, оно постепенно разрасталось вверх и вширь, пока не превратилось в плотную тучу. Она увеличивалась все больше, и наконец стало ясно, что эта пыль поднята множеством движущихся живых существ. Будь эти места более плодородны, можно было бы подумать, что это бизоны, которые огромными стадами пасутся в прериях. Но здесь, в мертвой пустыне, вряд ли водились бизоны. Облако медленно приближалось к одинокой скале, где спали двое несчастных. Сквозь дымку пыли показались парусиновые крыши повозок и силуэты вооруженных всадников — загадочное явление оказалось двигавшимся с, запада караваном. Но каким караваном! Когда головная его часть приблизилась к скале, на горизонте еще не было видно конца. Пересекая огромную равнину, тянулись нестройными вереницами телеги, крытые повозки, всадники, пешие, множество женщин, сгибавшихся под ношей; были здесь и дети,'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
