чут чут начал лит ревью

--- a/main.ipynb
+++ b/main.ipynb
@@ -86,8 +86,9 @@
    ],
    "source": [
     "\n",
-    "# algorithm = SemanticChunking(raw_storage=documents, chunk_storage=chunks, embedder=embedder, threshold=0.25, max_chunk_size=1000)\n",
-    "algorithm = WordCountingChunkingAlgorithm(raw_storage=documents, chunk_storage=chunks, words_amount=500)\n",
+    "# # algorithm = SemanticChunking(raw_storage=documents, chunk_storage=chunks, embedder=embedder, threshold=0.25, max_chunk_size=1000)\n",
+    "# algorithm = WordCountingChunkingAlgorithm(raw_storage=documents, chunk_storage=chunks, words_amount=500)\n",
+    "algorithm = NatashaSentenceChunking()\n",
     "algorithm.execute() # visualize=True)"
    ]
   },
