Small changes in structure

--- a/main.ipynb
+++ b/main.ipynb
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -416,8 +416,8 @@
     }
    ],
    "source": [
-    "from mirage.inference.prompters.APILLM import LLM\n",
-    "from mirage.inference.prompters.LLMGroq import GroqLLM\n",
+    "from mirage.inference.llm_adapters.APILLM import LLM\n",
+    "from mirage.inference.llm_adapters.LLMGroq import GroqLLM\n",
     "llm = GroqLLM()\n",
     "llm.do_request(query=\"What this text about?\",#query,\n",
     "               chunk_storage=chunks,\n",
