--- a/save_and_load.ipynb
+++ b/save_and_load.ipynb
@@ -13,25 +13,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1f6dc7c3",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Bulkin\\MIRAGE\\env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Document ФАП-273.pdf is empty.\n",
+      "Document ФАП-29.pdf is empty.\n",
+      "Document ФАП-32.pdf is empty.\n",
+      "Document ФАП-519.pdf is empty.\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 10\u001b[0m\n\u001b[0;32m      4\u001b[0m chunks \u001b[38;5;241m=\u001b[39m WhooshChunkStorage(scoring_function\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBM25F\u001b[39m\u001b[38;5;124m'\u001b[39m, normalizer\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m      5\u001b[0m chunking_algorithm \u001b[38;5;241m=\u001b[39m WordCountingChunkingAlgorithm(\n\u001b[0;32m      6\u001b[0m     raw_storage\u001b[38;5;241m=\u001b[39mraw_doc,\n\u001b[0;32m      7\u001b[0m     chunk_storage\u001b[38;5;241m=\u001b[39mchunks,\n\u001b[0;32m      8\u001b[0m     words_amount\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1000\u001b[39m\n\u001b[0;32m      9\u001b[0m )\n\u001b[1;32m---> 10\u001b[0m \u001b[43mchunking_algorithm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\Bulkin\\MIRAGE\\mirage\\index\\chunking_algorithms\\ChunkingAlgorithm.py:45\u001b[0m, in \u001b[0;36mChunkingAlgorithm.execute\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     41\u001b[0m raw_document_indexes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mraw_storage\u001b[38;5;241m.\u001b[39mget_indexes()\n\u001b[0;32m     42\u001b[0m parsed_indexes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m(\n\u001b[0;32m     43\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchunk_storage\u001b[38;5;241m.\u001b[39mget_raw_index_of_document(index) \u001b[38;5;28;01mfor\u001b[39;00m index \u001b[38;5;129;01min\u001b[39;00m  \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchunk_storage\u001b[38;5;241m.\u001b[39mget_indexes()\n\u001b[0;32m     44\u001b[0m )\n\u001b[1;32m---> 45\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28msum\u001b[39m(\u001b[43m[\u001b[49m\n\u001b[0;32m     46\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchunk_a_document\u001b[49m\u001b[43m(\u001b[49m\u001b[43mraw_document_index\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     47\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mraw_document_index\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\n\u001b[0;32m     48\u001b[0m \u001b[43m    \u001b[49m\u001b[43mraw_document_indexes\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;129;43;01mnot\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mraw_document_index\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mparsed_indexes\u001b[49m\n\u001b[0;32m     49\u001b[0m \u001b[43m\u001b[49m\u001b[43m]\u001b[49m)\n",
+      "File \u001b[1;32mc:\\Users\\Bulkin\\MIRAGE\\mirage\\index\\chunking_algorithms\\ChunkingAlgorithm.py:46\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     41\u001b[0m raw_document_indexes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mraw_storage\u001b[38;5;241m.\u001b[39mget_indexes()\n\u001b[0;32m     42\u001b[0m parsed_indexes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m(\n\u001b[0;32m     43\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchunk_storage\u001b[38;5;241m.\u001b[39mget_raw_index_of_document(index) \u001b[38;5;28;01mfor\u001b[39;00m index \u001b[38;5;129;01min\u001b[39;00m  \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchunk_storage\u001b[38;5;241m.\u001b[39mget_indexes()\n\u001b[0;32m     44\u001b[0m )\n\u001b[0;32m     45\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28msum\u001b[39m([\n\u001b[1;32m---> 46\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchunk_a_document\u001b[49m\u001b[43m(\u001b[49m\u001b[43mraw_document_index\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     47\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m raw_document_index \u001b[38;5;129;01min\u001b[39;00m \n\u001b[0;32m     48\u001b[0m     raw_document_indexes \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m raw_document_index \u001b[38;5;129;01min\u001b[39;00m parsed_indexes\n\u001b[0;32m     49\u001b[0m ])\n",
+      "File \u001b[1;32mc:\\Users\\Bulkin\\MIRAGE\\mirage\\index\\chunking_algorithms\\WordCountingChunkingAlgorithm.py:30\u001b[0m, in \u001b[0;36mWordCountingChunkingAlgorithm.chunk_a_document\u001b[1;34m(self, raw_document_index)\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mchunk_a_document\u001b[39m(\u001b[38;5;28mself\u001b[39m, raw_document_index: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mint\u001b[39m:\n\u001b[0;32m     28\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(raw_document_index) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mstr\u001b[39m\n\u001b[1;32m---> 30\u001b[0m     raw_text \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mraw_storage\u001b[49m\u001b[43m[\u001b[49m\u001b[43mraw_document_index\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m     31\u001b[0m     \u001b[38;5;66;03m# Handle empty documents\u001b[39;00m\n\u001b[0;32m     32\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m raw_text\u001b[38;5;241m.\u001b[39mstrip():\n",
+      "File \u001b[1;32mc:\\Users\\Bulkin\\MIRAGE\\mirage\\index\\raw_storages\\FolderRawStorage.py:54\u001b[0m, in \u001b[0;36mFolderRawStorage.__getitem__\u001b[1;34m(self, index)\u001b[0m\n\u001b[0;32m     52\u001b[0m file_name: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_storage[index]\n\u001b[0;32m     53\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file_name\u001b[38;5;241m.\u001b[39mendswith(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.pdf\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m---> 54\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mFolderRawStorage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__read_pdf\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     55\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file_name\u001b[38;5;241m.\u001b[39mendswith((\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.doc\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.docx\u001b[39m\u001b[38;5;124m'\u001b[39m)):\n\u001b[0;32m     56\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m FolderRawStorage\u001b[38;5;241m.\u001b[39m__read_doc(file_name)\n",
+      "File \u001b[1;32mc:\\Users\\Bulkin\\MIRAGE\\mirage\\index\\raw_storages\\FolderRawStorage.py:86\u001b[0m, in \u001b[0;36mFolderRawStorage.__read_pdf\u001b[1;34m(file_name)\u001b[0m\n\u001b[0;32m     84\u001b[0m     full_text \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m     85\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m page \u001b[38;5;129;01min\u001b[39;00m pdf\u001b[38;5;241m.\u001b[39mpages:\n\u001b[1;32m---> 86\u001b[0m         full_text\u001b[38;5;241m.\u001b[39mappend(\u001b[43mpage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mextract_text\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m     87\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(full_text)\n",
+      "File \u001b[1;32mc:\\Users\\Bulkin\\MIRAGE\\env\\Lib\\site-packages\\pdfplumber\\page.py:548\u001b[0m, in \u001b[0;36mPage.extract_text\u001b[1;34m(self, **kwargs)\u001b[0m\n\u001b[0;32m    547\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mextract_text\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs: Any) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mstr\u001b[39m:\n\u001b[1;32m--> 548\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_textmap\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mtuplify_list_kwargs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mas_string\n",
+      "File \u001b[1;32mc:\\Users\\Bulkin\\MIRAGE\\env\\Lib\\site-packages\\pdfplumber\\page.py:525\u001b[0m, in \u001b[0;36mPage._get_textmap\u001b[1;34m(self, **kwargs)\u001b[0m\n\u001b[0;32m    523\u001b[0m     defaults\u001b[38;5;241m.\u001b[39mupdate({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlayout_height\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mheight})\n\u001b[0;32m    524\u001b[0m full_kwargs: Dict[\u001b[38;5;28mstr\u001b[39m, Any] \u001b[38;5;241m=\u001b[39m {\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mdefaults, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs}\n\u001b[1;32m--> 525\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m utils\u001b[38;5;241m.\u001b[39mchars_to_textmap(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchars\u001b[49m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mfull_kwargs)\n",
+      "File \u001b[1;32mc:\\Users\\Bulkin\\MIRAGE\\env\\Lib\\site-packages\\pdfplumber\\container.py:52\u001b[0m, in \u001b[0;36mContainer.chars\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     50\u001b[0m \u001b[38;5;129m@property\u001b[39m\n\u001b[0;32m     51\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mchars\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m T_obj_list:\n\u001b[1;32m---> 52\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mobjects\u001b[49m\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mchar\u001b[39m\u001b[38;5;124m\"\u001b[39m, [])\n",
+      "File \u001b[1;32mc:\\Users\\Bulkin\\MIRAGE\\env\\Lib\\site-packages\\pdfplumber\\page.py:357\u001b[0m, in \u001b[0;36mPage.objects\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    355\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_objects\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m    356\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_objects\n\u001b[1;32m--> 357\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_objects: Dict[\u001b[38;5;28mstr\u001b[39m, T_obj_list] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparse_objects\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    358\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_objects\n",
+      "File \u001b[1;32mc:\\Users\\Bulkin\\MIRAGE\\env\\Lib\\site-packages\\pdfplumber\\page.py:461\u001b[0m, in \u001b[0;36mPage.parse_objects\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    459\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mparse_objects\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Dict[\u001b[38;5;28mstr\u001b[39m, T_obj_list]:\n\u001b[0;32m    460\u001b[0m     objects: Dict[\u001b[38;5;28mstr\u001b[39m, T_obj_list] \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m--> 461\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mobj\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43miter_layout_objects\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlayout\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_objs\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[0;32m    462\u001b[0m \u001b[43m        \u001b[49m\u001b[43mkind\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mobj\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mobject_type\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m    463\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mkind\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43manno\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m:\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\Bulkin\\MIRAGE\\env\\Lib\\site-packages\\pdfplumber\\page.py:457\u001b[0m, in \u001b[0;36mPage.iter_layout_objects\u001b[1;34m(self, layout_objects)\u001b[0m\n\u001b[0;32m    455\u001b[0m     \u001b[38;5;28;01myield from\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39miter_layout_objects(obj\u001b[38;5;241m.\u001b[39m_objs)\n\u001b[0;32m    456\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 457\u001b[0m     \u001b[38;5;28;01myield\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprocess_object\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobj\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\Bulkin\\MIRAGE\\env\\Lib\\site-packages\\pdfplumber\\page.py:365\u001b[0m, in \u001b[0;36mPage.process_object\u001b[1;34m(self, obj)\u001b[0m\n\u001b[0;32m    364\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mprocess_object\u001b[39m(\u001b[38;5;28mself\u001b[39m, obj: LTItem) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m T_obj:\n\u001b[1;32m--> 365\u001b[0m     kind \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39msub(lt_pat, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m, obj\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m)\u001b[38;5;241m.\u001b[39mlower()\n\u001b[0;32m    367\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mprocess_attr\u001b[39m(item: Tuple[\u001b[38;5;28mstr\u001b[39m, Any]) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Optional[Tuple[\u001b[38;5;28mstr\u001b[39m, Any]]:\n\u001b[0;32m    368\u001b[0m         k, v \u001b[38;5;241m=\u001b[39m item\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
     "from mirage import FolderRawStorage, WhooshChunkStorage, WordCountingChunkingAlgorithm\n",
-    "\n",
-    "raw_doc = FolderRawStorage(folder_path='data_test')\n",
+    "from loguru import logger\n",
+    "raw_doc = FolderRawStorage(folder_path='data')\n",
     "chunks = WhooshChunkStorage(scoring_function='BM25F', normalizer=True)\n",
     "chunking_algorithm = WordCountingChunkingAlgorithm(\n",
     "    raw_storage=raw_doc,\n",
@@ -43,20 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "14460ca1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chunks.save('chelovechki.whoosh')\n",
-    "chunks_loaded = WhooshChunkStorage.load('chelovechki.whoosh')\n",
-    "\n",
-    "assert all(x == y for x, y in zip(chunks.query('убийство'), chunks_loaded.query('убийство')))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "5223d8fa",
    "metadata": {},
    "outputs": [
@@ -81,62 +93,16 @@
     "\n",
     "\n",
     "emb = HuggingFaceEmbedder(model_name='BAAI/bge-m3')\n",
-    "# vectors = FaissIndexFlatL2(dimensionality=emb.get_dimensionality())\n",
     "vectors = FaissIndexFlatIP(dimensionality=emb.get_dimensionality())\n",
     "emb.convert_chunks_to_vector_index(\n",
-    "        chunk_storage=chunks_loaded,\n",
+    "        chunk_storage=chunks,\n",
     "        vector_index=vectors, visualize=True\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "f306fd7d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vectors.save('vectors.faiss')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "13748c86",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vectors_loaded = FaissIndexFlatL2.load('vectors.faiss')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "587edfed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query_vector = emb.embed('убийство')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "ee4a1c66",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert all(\n",
-    "    x == y for x, y in zip(\n",
-    "        vectors.query(query_vector=query_vector),\n",
-    "        vectors_loaded.query(query_vector=query_vector)\n",
-    "    )\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "4034731b",
    "metadata": {},
    "outputs": [],
@@ -151,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "7b75e073",
    "metadata": {},
    "outputs": [
@@ -170,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "cf35b30a",
    "metadata": {},
    "outputs": [
@@ -189,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "faecc78b",
    "metadata": {},
    "outputs": [
